kubernetes/clusters/home/infrastructure/monitoring/signoz/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signoz
  namespace: signoz
spec:
  ingressClassName: traefik
  rules:
    - host: signoz.syslabs.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signoz
                port:
                  number: 8080
